Fixed flex-wrap in input form

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -41,6 +41,8 @@ body{
 }
 
 #form-contact-area{
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
     top:106px;
     height: 237px;
